# solverStudy

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt  main.cpp
